intro for chapter 5

--- a/sigma.tex
+++ b/sigma.tex
@@ -2,13 +2,20 @@
 
 \chapter{The \texorpdfstring{$\sigma$}{sigma}-orientation}\label{ChapterSigmaOrientation}
 
+At this point, we have seen a great many ways that algebraic geometry exerts control over the behavior of homotopy theory, stable and unstable.  The goal in this Case Study is to explore a setting where algebraic geometry is itself tightly controlled: whereas the behavior of formal groups is quite open-ended, the behavior of \emph{abelian varieties} is comparatively extremely strict.  This encourages us to study complex-orientable cohomology theories $E$ which have been tagged with an auxiliary abelian variety $A$ via an isomorphism $\phi\co \CP^\infty_E \cong A^\wedge_0$.  In the case that $A$ is an elliptic curve, this is our definition of an \textit{elliptic cohomology theory}.  The idea, then, is not that this puts serious constraints on the formal group $\CP^\infty_E$ (although it does place some), but rather than the theory of abelian varieties endows $A$, and hence $A^\wedge_0$, with various bits of preferred data on $A^\wedge_0$.  This is the tack we take to construct a \emph{canonical} orientation $MU[6, \infty) \to E$: for any complex-orientable $E$, we identify the collection of such ring maps with ``$\theta$--structures on $\CP^\infty_E$'', and a basic theorem about abelian varieties endows the elliptic curve $A$ with a canonical such structure, altogether yielding the desired orientation.
 
-\todo[inline]{Write an introduction for me.  Use unstable cooperations from Morava's theories to classical complex and real $K$--theory.  Another main point of this chapter is that it invokes projective algebraic geometry: that's what the chosen isomorphism with an actual elliptic curve, rather than just some abstract formal group, is all about.}
+Making the identification of $MU[6, \infty)$--orientations with $\theta$--structures requires real work, but many of the stepping stones are now in place.  We begin with a technical section about especially nice formal schemes, called \textit{coalgebraic}, and we use this to finally give the proof, announced back in \Cref{DivConstructionsAreFree}, that the scheme of stable Weil divisors on a formal curve presents the free formal group on that curve.  With that out of the way and with $MU[6, \infty)$ in mind as the eventual goal, we then summarize the behavior of the part of the Postnikov tower for complex bordism that we \emph{do} understand---the cases of $MUP$ and $MU$---and use this to make an analysis of $MSU$.  In particular, we rely heavily on the results developed in \Cref{UnstableCooperationsChapter} to access the co/homology of the layers of the Postnikov tower and on the results from the two Case Studies preceding that to understand the co/homological behaviors of $BU \times \Z$, $BU$, $MUP$, and $MU$.
 
-\todo[inline]{Part of the theme of this chapter should be to use the homomorphism from topological vector bundles to algebraic line bundles---Neil's $\mathbb L$ construction---as inspiration for what to do, given suitable algebraic background.}
+The coherence of all of these statements gives us target theorems to aim for in our study of $MU[6, \infty)$, but we are required to approach them from a different vantage point: whereas we can prove a splitting principle for $SU$--bundles, the analogous statement for $U[5, \infty)$--bundles does not appear to admit a direct proof.  Consequently, the proofs of the other structure theorems for $BU[6, \infty)$ and $MU[6, \infty)$ are made considerably more complicated because we have to work with our splitting principle hands tied.  When the dust of this settles, we will have arrived at a very satisfying and complete theory of $MU[6, \infty)$--orientations.  The reader gifted with an exceptional attention span will recall from \Cref{IntroductionSection} that we were \emph{really} interested in orientations of the type \[M\String \to E,\] especially in the case of $E = K^{\Tate}$, a particular cohomology theory called \textit{Tate $K$--theory}.  We close this Case Study with an analysis of this last setting, where we finally give into placing more hypotheses on $E$, in order to gain calculational access to the non-complex-orientable setting of M$\String$---something not generally available to arbitrary $E$.
 
-\todo[inline]{An artifact of these being lecture notes for an actual class is that this last section is getting compressed due to end-of-semester time constraints.  I think a published version of these notes would contain proofs of a bunch of these facts which, at present, are getting omitted either because the proofs take too long or because simply understanding the theorem statements takes too long.  Really, the class in general is becoming quite strained at this point: it's hard to keep everything straight both for the students and for the teacher.}
+We also give a short r\'esum\'e on the theory of elliptic curves in \Cref{SectionEllipticCurvesAndThetaFunctions}, extracting the smallest possible subset of their theory that we will need here.
 
+
+
+
+
+
+\todo{Part of the theme of this chapter should be to use the homomorphism from topological vector bundles to algebraic line bundles---Neil's $\mathbb L$ construction---as inspiration for what to do, given suitable algebraic background.}
 \todo{Jack has a paper called \textit{The motivic Thom isomorphism} in the Elliptic Cohomology LMS volume where he discusses some pretty interesting perspectives on genera.  Could be worth mentioning as a ``further reading'' sort of thing, at least.}
 
 
@@ -954,6 +961,7 @@ Our goal today is to actually leverage the arithmetic geometry in \Cref{Theta3Is
 
 \begin{definition}\label{DefnEllipticSpectrum}
 An \textit{elliptic spectrum} consists of a even--periodic ring spectrum $E$, a (generalized) elliptic curve $C$ over $\Spec E_0$, and a fixed isomorphism \[\phi\co C^\wedge_0 \xrightarrow{\cong} \CP^\infty_E.\]  A map among such spectra consists of a map of ring spectra $f\co E \to E'$ together with a specified isomorphism of elliptic curves $\psi\co f^* C \to C'$.
+\todo{Mention that elliptic curves and cohomology theories can be brought together more closely, as in \cite[Sections 4 and 5.3]{LurieSurveyOfEll}.}
 \end{definition}
 
 \begin{remark}
