--- a/main.bib
+++ b/main.bib
@@ -1029,6 +1029,12 @@ MRREVIEWER = {J. Dieudonn{\'e}},
   note = {\url{http://www.math.harvard.edu/~lurie/papers/SAG-rootfile.pdf}, Accessed: 2016-09-22}
 }
 
+@ARTICLE{LurieSurveyOfEll,
+  author = {Lurie, Jacob},
+  title = {A Survey of Elliptic Cohomology},
+  note = {\url{http://www.math.harvard.edu/~lurie/papers/survey.pdf}, Accessed: 2017-03-04}
+}
+
 @book {Margolis,
     AUTHOR = {Margolis, H. R.},
      TITLE = {Spectra and the {S}teenrod algebra},
