--- a/main.tex
+++ b/main.tex
@@ -36,42 +36,25 @@
 \tableofcontents
 
 \todo[inline]{I would like as few section titles as possible to involve people's names.}
-
 \todo[inline]{A bunch of broken displaymode tombstones can have their positions fixed by using http://tex.stackexchange.com/a/66221/2671.}
-
 \todo[inline]{Compile an index by replacing all the \texttt{textit} commands in definition environments with some more fancy macro that tags it for inclusion.  There's information on how indices are compiled here: https://en.wikibooks.org/wiki/LaTeX/Indexing.}
-
 \todo[inline]{Remember to use $f\co A \to B$ everywhere.}
-
 \todo[inline]{Should sections have subsections?  Does that help organize the TOC?}
-
 \todo[inline]{Hood wrote a macro called sumfgl (see also sumF and sumG) that will make a bunch of formal group law expressions typeset better. Propagate that change through.  Consider also the adjunct macro in the preamble.  (Jay says that left-adjoints should be on top in general.)}
-
 \todo[inline]{Make sure you use either $\id$ or $1$ everywhere to denote the identity morphism.}
-
 \todo[inline]{You're not very consistent about using $\G$ or $\Gamma$ to denote an arbitrary formal group. It seems like you use one or the other based on your preference of whether it has finite height or not.}
-
 \todo[inline]{Eliminate contractions.}
-
 \todo[inline]{Eliminate filler words like ``things''.}
-
 \todo[inline]{Make sure that ``Case Study'' and ``Lecture'' are OK names by Springer's standards. If they aren't, do a careful search-and-replace for them.}
-
 \todo[inline]{Double check that you're careful about choosing consistent names for your objects: $S = \Spec R$ is the base scheme, that sort of thing.}
-
 \todo[inline]{Be consistent about $\sheaf O_X$ vs $\sheaf O(X)$, and similarly with $\sheaf I_D$ versus $\sheaf I(D)$.}
-
 \todo[inline]{Be consistent about ``$\S$'' versus ``$\S^0$'' for the standard sphere spectrum.}
-
 \todo[inline]{The AGT style guide says that ``---'' should not have spaces on either side.}
-
 \todo[inline]{We should use the convention that $\phi \in \moduli{fgl}(T)$ corresponds to $x +_\phi y \in T\ps{x, y}$ throughout.}
-
 \todo[inline]{Jon suggested that we include backreferences from the bibliography, using the package \texttt{backref}.  More information on getting this to work well is at this tex.se url: http://tex.stackexchange.com/questions/54541/precise-back-reference-target-with-hyperref-and-backref .}
-
 \todo[inline]{Use Hood's HFp macro where appropriate.  (Maybe modify it also to do HF2 appropriately.)}
-
 \todo[inline]{Encourage spectral sequence figures to occur on facing pages.}
+\todo[inline]{Clark's use of MinionPro font is really nice.  Generally, we should make an effort to pick a nice font.}
 
 
 
