turn on optical margins

--- a/preamble.tex
+++ b/preamble.tex
@@ -5,6 +5,7 @@
             pdftitle={Formal Geometry and Bordism Operations}]{hyperref}
 
 \usepackage{fullpage}
+\usepackage[protrusion=true,expansion=true]{microtype}
 % \usepackage{savetrees}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{stmaryrd} % for \llbracket and \rrbracket
