todo about booktabs

--- a/main.tex
+++ b/main.tex
@@ -54,7 +54,8 @@
 \todo[inline]{Jon suggested that we include backreferences from the bibliography, using the package \texttt{backref}.  More information on getting this to work well is at this tex.se url: http://tex.stackexchange.com/questions/54541/precise-back-reference-target-with-hyperref-and-backref .}
 \todo[inline]{Use Hood's HFp macro where appropriate.  (Maybe modify it also to do HF2 appropriately.)}
 \todo[inline]{Encourage spectral sequence figures to occur on facing pages.}
-\todo[inline]{Clark's use of MinionPro font is really nice.  Generally, we should make an effort to pick a nice font.}
+\todo[inline]{Clark's use of MinionPro font is really nice.  Generally, we should make an effort to pick a nice font.  http://web.willbenton.com/writing/2008/better-latex has more info about converting FF fonts for use in LaTeX, including Minion.}
+\todo[inline]{Use booktabs (http://www.ctan.org/tex-archive/macros/latex/contrib/booktabs/) to typeset any tables appearing in this book.  (I don't think there are very many.)}
 
 
 
