dust up Section 5.1

--- a/quillen.tex
+++ b/quillen.tex
@@ -481,7 +481,7 @@ This says that the splitting principle is a topological enhancement of the claim
 
 The other constructions from \Cref{CurveDivisorsSection} are also easily matched up with topological counterparts:
 
-\begin{corollary}
+\begin{corollary}\label{ECohomBUIsFree}
 There are natural isomorphisms $BU_E \cong \Div_0 \CP^\infty_E$ and $(BU \times \Z)_E \cong \Div \CP^\infty_E$. Additionally, $(BU \times \Z)_E$ is the free formal group on the curve $\CP^\infty_E$. \qed
 \end{corollary}
 
