minor repairs to last remark in 5.1

--- a/sigma.tex
+++ b/sigma.tex
@@ -125,7 +125,7 @@ The effect of Cartier duality on the Dieudonn\'e module of a formal group is \em
 \end{remark}
 
 \begin{remark}\label{TopologicalCartierDuality}
-Cartier duality intertwines the homological and cohomological formal schemes assigned to a commutative $H$--space.  When such a commutative $H$--space $X$ has free and even $E$--homology, there is an isomorphism \[DX_E = \InternalHom{GroupSchemes}(X_E, \Gm) \cong \Spec E_0 X.\]
+Cartier duality intertwines the homological and cohomological schemes assigned to a commutative $H$--space.  When such a commutative $H$--space $X$ has free and even $E$--homology, there is an isomorphism \[D(\Spf E^0 X) = DX_E = \InternalHom{GroupSchemes}(X_E, \Gm) \cong \Spec E_0 X.\]
 \end{remark}
 
 
